# aws-ai-video-meeting-platform

./: .gitignore  AGENT.md  AI_MEETING_INTELLIGENCE_PLATFORM_TDD.md  ARCHITECTURE_DIAGRAMS.md  FLOW.md  README.md  TODO.md  conftest.py  pyproject.toml
.claude/: settings.local.json
apps/api/: README.md
apps/api/tests/: test_app.py  test_uploader.py
database/migrations/: 001_init.sql  002_idempotency_constraints.sql
database/seeds/: 001_dev_seed.sql
infra/terraform/: README.md
libs/connectors/tests/: test_issues.py
libs/contracts/tests/: test_validation.py
libs/shared/tests/: test_idempotency.py
services/ai-enrichment-service/: README.md
services/ai-enrichment-service/tests/: test_embedder.py  test_generator.py  test_handler.py  test_indexer.py  test_prompting.py  test_publisher.py  test_service.py  test_store.py
services/chat-rag-service/: README.md
services/chat-rag-service/tests/: test_answerer.py  test_handler.py  test_permissions.py  test_retriever.py  test_service.py
services/ingestion-service/: README.md
services/ingestion-service/tests/: test_handler.py  test_publisher.py  test_s3_event.py  test_service.py  test_store.py
services/integration-service/: README.md
services/integration-service/tests/: test_handler.py  test_service.py  (+2 more)
services/media-service/: README.md
services/notification-service/: README.md
services/search-query-service/: README.md
services/status-observer-service/: README.md
services/task-orchestrator-service/: README.md
services/transcription-service/: README.md
tests/integration/: test_pipeline_flow.py
(+94 files in other folders)
